# c-garbage-collector

./: CMakeLists.txt  dyn_obj.h  main.c
marksweep_gc/: dyn_obj.c  dyn_obj.h  dyn_stack.c  dyn_vm.c  dyn_vm.h  main_marksweep.c
refcount_gc/: dyn_obj.c  dyn_obj.h  main_refcount.c
